   Java APIs are already licensed under the LGPL (anything packaged under the Goby-io.jar file).
 - Fix problem when using a genome backed by a samtools/picard faidx file. In some cases, read bases would be returned
   shifted by one position. Thanks to James Bonfield for reporting this problem.
 - Introduce interface for ReadsWriter. Introduce mock implementation to write reads to text. This is useful to write
   more intelligible JUnit tests.
 - fix a bug in reformat-compact-reads which did not trim quality scores for paired end reads correctly.

2.0
 - Support multiple group comparisons for RNA-Seq diff exp (mode compact-alignment-to-annotation-counts).
 - Added a mode sam-comparison to compare a source SAM/BAM file with one that generated after sam-to-compact then
   compact-to-sam.
 - Refactor AlignmentWriter to introduce an interface and make it easier to create facades that modify the behaviour
   of the default writer. For instance, such a facade is BufferedSortingAlignmentWriter, which keeps a number of entries
   in memory to re-sort these entries by genomic position. This feature is used when importing already sorted SAM/BAM
   files to create sorted Goby alignments and the files contain spliced alignments that would cause mis-ordering during
   conversion.
 - Make default chunk-size dependent on the type of chunk codec used. This is useful because hybrid compression does
   better with larger chunk sizes (default chunk size for hybrid is 30000, 20000 for bzip2 and 10000 for gzip). The
   default chunk size can be overriden with -x MessageChunksWriter:chunk-size=int
 - Add ability to preserve SAM/BAM read groups. Read groups are automatically preserved if present in the input BAM file.
   The concatenate mode automatically reassigns read_origin indices (see field read_origin_index) to prevent conflicts
   when Goby files from different origins are concatenated. The approach we use is to keep the most specific read origin