@@ -4,10 +4,13 @@
    Java APIs are already licensed under the LGPL (anything packaged under the Goby-io.jar file).
  - Fix problem when using a genome backed by a samtools/picard faidx file. In some cases, read bases would be returned
    shifted by one position. Thanks to James Bonfield for reporting this problem.
+ - SAM/BAM tags start at column 12, index 11. --preserve-all-tags could skip the first tag on some datasets (e.g.,
+   dataset where the first tag was not a MD:Z or RG:Z). Thanks to James Bonfield for reporting this problem.
  - Introduce interface for ReadsWriter. Introduce mock implementation to write reads to text. This is useful to write
    more intelligible JUnit tests.
+ - mode sam-to-compact now supports option --read-names-are-query-indices to indicate that the read names are integers
+   (typically produced by compact-to-fasta from a chunk of a large file).
  - fix a bug in reformat-compact-reads which did not trim quality scores for paired end reads correctly.
-
 2.0
  - Support multiple group comparisons for RNA-Seq diff exp (mode compact-alignment-to-annotation-counts).
  - Added a mode sam-comparison to compare a source SAM/BAM file with one that generated after sam-to-compact then
